b=779786 check fbconfig alpha instead of buffer size against render format r=mattwoodrow